# bggxmlapi

./: .gitignore  AGENTS.md  LICENSE  README.md  blog_draft_bgg_analysis.md  pyproject.toml
bgg_api/: __init__.py  client.py  exceptions.py  models.py  snapshot.py  stats.py
bgg_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: README.md  analyze_top_raters.py  compare_game_ratings.py  corr_in_cluster.py  cross_correlation.py  find_common_collection_games.py  get_game_graph.py  phase1_offline_filtering.py  phase2_candidate_expansion.py  phase3_iterative_expansion.py  rank_clusters.py
tests/: test_bgg_client.py  test_snapshot.py  test_stats.py
tests/fixtures/: collection_testuser.xml  plays_mkgray_page1.xml  plays_mkgray_page2.xml  ratings_822_page1.xml  ratings_822_page2.xml  search_pandemic.xml  thing_174430.xml  thing_822.xml  user_testuser.xml
