[project]
name = "bgg-api"
version = "0.1.0"
description = "A Python client for the BoardGameGeek (BGG) XML API."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name="Jules", email="jules@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "requests>=2.20.0",
    "requests-cache>=0.9.0",
    "lxml>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/example/bgg-api"
Issues = "https://github.com/example/bgg-api/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "responses",
    "black",
]
